syntax = "proto3";

package actor.user.booklend.v1;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "eventsourcing/v1/events.proto";

message BookRegistered {
  eventsourcing.v1.EventBase base = 1;
  google.protobuf.Timestamp timestamp = 2;
  string title = 3;
  string isbn = 4;
}

message BookLent {
  eventsourcing.v1.EventBase base = 1;
  google.protobuf.Timestamp timestamp = 2;
  string borrower = 3;
  google.protobuf.Timestamp date = 4;
  google.protobuf.Duration expected_duration = 5;
}

message BookReturned {
  eventsourcing.v1.EventBase base = 1;
  google.protobuf.Timestamp timestamp = 2;
  string by = 3;
  google.protobuf.Timestamp date = 4;
  google.protobuf.Duration lent_duration = 5;
}
