syntax = "proto3";

package eventsourcing.v1;

message EventBase {
  string id = 1;
}
