syntax = "proto3";

package persistence;

import "google/protobuf/any.proto";

message ConsiderSnapshot {
  google.protobuf.Any payload = 1;
}
